Try to avoid collapse

--- a/resources/css/mystyle-default.css
+++ b/resources/css/mystyle-default.css
@@ -22,7 +22,8 @@ and open the template in the editor.
 
 body, html {
   height: 100%;
-  width:100%;
+  /*width:100%;*/
+  min-width: 900px;
 }
 .body-default {  
     color:#1b5e20; 
@@ -63,7 +64,8 @@ body, html {
 
 
 #id-header-navbar {
-    width:100%;
+    min-width: 800px;
+    /*width:100%;*/
     background-color:#4CAF50;
     color:white;
     margin-bottom: 0px;
@@ -71,6 +73,10 @@ body, html {
 #bs-example-navbar-collapse-1 {
     padding-right: 60px;
 }
+.container-fluid {
+    height:48px;
+}
+
 #id-header-navbar-profile-plugin {
     width:40px;
     height:40px;
@@ -405,6 +411,8 @@ body, html {
 
 /* --- Project specific -------------------------------------------------------*/
 #main-map-canvas {
-    width:100%;
+    /*width:100%;
+    height:600px;*/
+    width:600px;
     height:600px;
 }
